fix: rating alignment

--- a/src/pages/games/styles/game-page.css
+++ b/src/pages/games/styles/game-page.css
@@ -41,6 +41,7 @@ body {
 .game-container {
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     gap: 60px;
     padding: 10px 30px 30px 30px;
     position: relative;
@@ -51,6 +52,7 @@ body {
 .game-page-info {
     display: flex;
     flex-direction: column;
+    width: 57.47%;
     gap: 20px;
 }
 
@@ -86,7 +88,7 @@ body {
 
 
 .comments-wrapper {
-    width: 100%;
+    width: 57.47%;
     display: flex;
     flex-direction: column;
 
@@ -385,6 +387,24 @@ body {
     background: var(--blueviolet-700);
     width: 30px;
     border-radius: 5px;
+}
+@media (max-width: 1260px) {
+    .game-container {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .rating-container{
+        width: 100%;
+        align-items: center;
+    }
+    .game-page-info {
+        width: 100%;
+    }
+    .comments-wrapper {
+        width: 100%;
+    }
+
 }
 
 @media (max-width: 1200px) {
